--- a/index.html
+++ b/index.html
@@ -1,89 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Simple Website Builder</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      display: flex;
-      height: 100vh;
-    }
-    .sidebar {
-      width: 280px;
-      background: #020617;
-      padding: 16px;
-      box-sizing: border-box;
-    }
-    .sidebar h2 {
-      margin-top: 0;
-    }
-    .sidebar button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px;
-      font-size: 16px;
-      background: #2563eb;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-    .preview {
-      flex: 1;
-      background: white;
-      color: black;
-      padding: 20px;
-      overflow: auto;
-    }
-    .block {
-      border: 2px dashed #94a3b8;
-      padding: 20px;
-      margin-bottom: 10px;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Website Builder Platform</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+* { box-sizing: border-box; }
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+  background: #ffffff;
+  color: #111;
+}
+
+/* NAV */
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 40px;
+  border-bottom: 1px solid #eee;
+}
+nav a {
+  text-decoration: none;
+  color: #111;
+  font-weight: 500;
+  margin-left: 20px;
+}
+
+/* HERO */
+.hero {
+  padding: 100px 40px;
+  text-align: center;
+}
+.hero h1 {
+  font-size: 56px;
+  max-width: 900px;
+  margin: auto;
+}
+.hero p {
+  font-size: 20px;
+  color: #555;
+  max-width: 600px;
+  margin: 20px auto;
+}
+.hero button {
+  padding: 16px 30px;
+  font-size: 18px;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+/* SECTIONS */
+.section {
+  padding: 80px 40px;
+  max-width: 1200px;
+  margin: auto;
+}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 30px;
+}
+.card {
+  border: 1px solid #eee;
+  padding: 30px;
+  border-radius: 14px;
+}
+
+/* BUILDER */
+.builder {
+  background: #f9fafb;
+  padding: 60px 40px;
+}
+.builder-ui {
+  display: flex;
+  gap: 20px;
+}
+.sidebar {
+  width: 240px;
+}
+.sidebar button {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  background: white;
+  cursor: pointer;
+}
+.preview {
+  flex: 1;
+  background: white;
+  padding: 20px;
+  min-height: 300px;
+  border: 1px solid #ddd;
+}
+
+/* PRICING */
+.pricing {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  gap: 20px;
+}
+.price-card {
+  border: 1px solid #eee;
+  padding: 30px;
+  border-radius: 16px;
+  text-align: center;
+}
+
+/* FOOTER */
+footer {
+  padding: 40px;
+  text-align: center;
+  color: #777;
+  border-top: 1px solid #eee;
+}
+</style>
 </head>
+
 <body>
 
-  <div class="sidebar">
-    <h2>Website Builder</h2>
-    <button onclick="addText()">Add Text</button>
-    <button onclick="addButton()">Add Button</button>
-    <button onclick="addSection()">Add Section</button>
+<nav>
+  <strong>WebsiteBuilder</strong>
+  <div>
+    <a href="#">Templates</a>
+    <a href="#">Pricing</a>
+    <a href="#">Login</a>
   </div>
+</nav>
 
-  <div class="preview" id="preview">
-    <h1>Your Website Preview</h1>
+<section class="hero">
+  <h1>Create a website you’re proud of</h1>
+  <p>Design, customize, and launch your website — no coding required.</p>
+  <button onclick="document.getElementById('builder').scrollIntoView()">Start Building</button>
+</section>
+
+<section class="section">
+  <h2>Beautiful Templates</h2>
+  <div class="grid">
+    <div class="card">Portfolio Template</div>
+    <div class="card">Business Template</div>
+    <div class="card">Store Template</div>
   </div>
+</section>
 
-  <script>
-    function addText() {
-      const div = document.createElement("div");
-      div.className = "block";
-      div.contentEditable = true;
-      div.innerText = "Edit this text";
-      document.getElementById("preview").appendChild(div);
-    }
+<section id="builder" class="builder">
+  <h2>Live Website Builder</h2>
+  <div class="builder-ui">
+    <div class="sidebar">
+      <button onclick="addText()">Add Text</button>
+      <button onclick="addButton()">Add Button</button>
+      <button onclick="addSection()">Add Section</button>
+    </div>
+    <div class="preview" id="preview">
+      <h3>Your Website</h3>
+    </div>
+  </div>
+</section>
 
-    function addButton() {
-      const btn = document.createElement("button");
-      btn.innerText = "Click Me";
-      btn.style.padding = "12px";
-      btn.style.margin = "10px 0";
-      document.getElementById("preview").appendChild(btn);
-    }
+<section class="section">
+  <h2>Pricing</h2>
+  <div class="pricing">
+    <div class="price-card">
+      <h3>Personal</h3>
+      <p>$12/month</p>
+    </div>
+    <div class="price-card">
+      <h3>Business</h3>
+      <p>$18/month</p>
+    </div>
+    <div class="price-card">
+      <h3>Commerce</h3>
+      <p>$26/month</p>
+    </div>
+  </div>
+</section>
 
-    function addSection() {
-      const section = document.createElement("div");
-      section.className = "block";
-      section.innerText = "New Section";
-      document.getElementById("preview").appendChild(section);
-    }
-  </script>
+<footer>
+  © 2026 WebsiteBuilder · Inspired by modern website platforms
+</footer>
+
+<script>
+function addText() {
+  const div = document.createElement("div");
+  div.contentEditable = true;
+  div.style.border = "1px dashed #ccc";
+  div.style.padding = "15px";
+  div.style.marginBottom = "10px";
+  div.innerText = "Edit this text";
+  document.getElementById("preview").appendChild(div);
+}
+
+function addButton() {
+  const btn = document.createElement("button");
+  btn.innerText = "Button";
+  btn.style.padding = "12px 20px";
+  btn.style.marginBottom = "10px";
+  document.getElementById("preview").appendChild(btn);
+}
+
+function addSection() {
+  const section = document.createElement("div");
+  section.style.border = "2px solid #eee";
+  section.style.padding = "20px";
+  section.style.marginBottom = "10px";
+  section.innerText = "New Section";
+  document.getElementById("preview").appendChild(section);
+}
+</script>
 
 </body>
 </html>
